Bug: fix cropper boundary height
Note: have not found solution for cropper viewport frame being cut off slightly by overflow-hidden

--- a/src/VideoEditor/Cropper/cropper.css
+++ b/src/VideoEditor/Cropper/cropper.css
@@ -39,7 +39,7 @@
 }
 .croppie-container .cr-boundary {
   /* overflow: visible; */
-  height: calc(100% + 4px) !important;
+  /* height: calc(100% + 4px) !important; */
   overflow: hidden;
 }
 .croppie-container {
